--- a/index.html
+++ b/index.html
@@ -268,7 +268,13 @@
             white-space: nowrap;
         }
         .btn-report {
+            font-weight: bold;
             margin-top: 20px;
+        }
+        .img-a{
+            display: inline-block;
+            height: 30px;
+            vertical-align: middle;
         }
         #resultTitle {
             font-size: 14px;
@@ -361,7 +367,9 @@
 				<h3 id="resultTitle">AI分析报告完成</h3>
 				<hr> <!-- 分割线 -->
 				<p id="resultText">加载中...</p> <!-- 诊断结果描述 -->
-				<a class="btn btn-success btn-report" id="getReportBtn" style="background-color: #20C930;">添加 WhatsApp 接收 AI 分析报告</a>
+				<a class="btn btn-success btn-report" id="getReportBtn" style="background-color: #20C930;font-weight: bold;">
+				    <img class="img-a" src="images/Whatsapp_37229.png" />
+				    添加 WhatsApp 接收 AI 分析报告</a>
                 </div>
 			</div>
 
